k8s_jenkins_sonar/Jenkins/jenkins_all.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pod-volumes-localvolume-volume
          mountPath: /var/jenkins_home
      volumes:
      - name: pod-volumes-localvolume-volume
        persistentVolumeClaim:
          claimName: localvolume-pvc
